main/default/objects/Communication_Recipient__c/Communication_Recipient__c.object-meta.xml
<CustomObject>
    <label>Communication Recipient</label>
    <nameField>
        <displayFormat>CCCR{00000}</displayFormat>
        <label>CC Communication Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>