main/default/objects/Communication_Recipient__c/fields/CC_Communication__c.field-meta.xml
<CustomField>
    <fullName>CC_Communication__c</fullName>
    <label>CC Communication</label>
    <referenceTo>Communication__c</referenceTo>
    <relationshipName>CC_Communication_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>