main/default/objects/Communication_Recipient__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communication Recipients</relationshipLabel>
    <relationshipName>Communication_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>