main/default/objects/Communication_Recipient__c/fields/Date_Read__c.field-meta.xml
<CustomField>
    <fullName>Date_Read__c</fullName>
    <label>Date Read</label>
    <type>Date</type>
</CustomField>