main/default/objects/Communication_Recipient__c/fields/Event_Participant__c.field-meta.xml
<CustomField>
    <fullName>Event_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References an event participant record</description>
    <label>Event Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Communication Recipients</relationshipLabel>
    <relationshipName>Communication_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>