main/default/objects/Communication_Recipient__c/fields/Journey_Participant__c.field-meta.xml
<CustomField>
    <fullName>Journey_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Participant</label>
    <referenceTo>Journey_Participant__c</referenceTo>
    <relationshipLabel>Communication Recipients</relationshipLabel>
    <relationshipName>Communication_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>