main/default/objects/Communication_Recipient__c/fields/Send_as__c.field-meta.xml
<CustomField>
    <fullName>Send_as__c</fullName>
    <label>Send as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>