main/default/objects/Communication_Recipient__c/fields/Survey_Participant__c.field-meta.xml
<CustomField>
    <fullName>Survey_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References a survey participant record to use in an email template</description>
    <label>Survey Participant</label>
    <referenceTo>Survey_Participant__c</referenceTo>
    <relationshipLabel>Communication Recipients</relationshipLabel>
    <relationshipName>Communication_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>